src/assets/main.css
@import './normalize.css';

html,
body {
  height: 100%;
  overflow: scroll;
  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
}

#app {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  min-width: 320px;
  overflow: scroll;
  background-color: lightpink;
}

.loader {
  z-index: 9000;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 20px;
  font-weight: bold;
  color: #ffffff;
  background-color: #000000;
}

/* Board Layout */

.game-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  min-width: 320px;
  background-color: crimson;
}

.scroll-container {
  position: relative;
  width: 100%;
  margin: auto;
}

.opponent-board {
  flex: 1 1;
  display: flex;
  flex-direction: column-reverse;
  justify-content: end;
  background-color: lightskyblue;
}

.player-board {
  flex: 1 1;
  background-color: lemonchiffon;
}

.game-stats {
  display: flex;
  justify-content: center;
  height: 70px;
  padding-left: 40px;
  background-color: darkseagreen;
}

.player-stats,
.opponent-stats {
  display: flex;
  align-items: center;
}

.player-stats {
  padding-right: 10px;
}

.opponent-stats {
  padding-left: 10px;
}

.stat-badge {
  text-align: center;
  border: 3px solid #ffffff;
  border-radius: 50%;
}

.game-stats .stat-badge {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  font-weight: bold;
  font-size: 20px;
}

.opponent-stats .stat-badge {
  background-color: lightskyblue;
}

.player-stats .stat-badge {
  background-color: lemonchiffon;
}

.card-row {
  display: flex;
  height: 70px;
  background-color: coral;
}

.row-stats {
  flex: 0 40px;
  display: flex;
  justify-content: center;
}

.row-stats .stat-badge {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 30px;
  height: 30px;
  font-size: 15px;
}

.opponent-board .stat-badge {
  background-color: lightskyblue;
}

.player-board .stat-badge {
  background-color: lemonchiffon;
}

.card-container {
  flex: 1 1;
  display: flex;
  justify-content: center;
  overflow: hidden;
}

.player-hand {
  justify-content: center;
  background-color: grey;
}

/* Common Shared Classes */

.card {
  position: relative;
  box-sizing: border-box;
  background-position: center;
  background-size: cover;
  background-color: #000000;
}

.card-stat-badge {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid #000000;
  border-radius: 50%;
  color: #000000;
  background-color: #ffffff;
}

.card-stat-badge.ability {
  border-color: #ffffff;
  color: #ffffff;
  background-color: #000000;
}

.card-stat-badge.type {
  position: absolute;
  right: 0;
  border-color: #775022;
  background-color: #c9883a;
}

.card.hero .card-stat-badge.value {
  border-style: dotted;
  border-color: #f9a825;
  color: #f9a825;
  background-color: #000000;
}

.no-mobile-highlight {
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

/* Board Card */

.board-card {
  overflow: hidden;
  box-sizing: border-box;
  border: 1px solid rgba(0, 0, 0, 0);
  border-radius: 4px;
  cursor: pointer;
}

.board-card.active {
  background-color: yellow;
}

.board-card:last-child,
.board-card:hover,
.board-card.active {
  overflow: visible;
}

.board-card .card {
  width: 50px;
  height: 100%;
  border-radius: 4px;
  border: 1px solid #000000;
}

.board-card .card-stat-badge {
  width: 18px;
  height: 18px;
  font-size: 12px;
}

.board-card .card-stat-badge.type {
  bottom: 2px;
}

/* Card Modal */

.card-modal {
  z-index: 5000;
  position: absolute;
  top: 0;
  bottom: 70px;
  left: 0;
  right: 0;
}

.card-modal .card-modal-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

.card-modal .card-modal-content {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Card Carousel */

.card-carousel {
  position: relative;
  display: flex;
  width: 300px;
  height: 100%;
  align-items: center;
  justify-content: center;
}

.slides {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
}

.slide {
  display: none;
}

.slide.active {
  display: block;
}

.prev-btn,
.next-btn {
  position: absolute;
  top: 50%;
  left: 0;
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: -25px;
  border: 2px solid black;
  border-radius: 50%;
  color: #fff;
  cursor: pointer;
  transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
  background: #000000;
}

.next-btn {
  left: auto;
  right: 0;
}

.prev-btn:active,
.next-btn:active {
  transform: translate(0, 3px);
}

/* Hover animation on supported devices only */
@media (hover: hover) {
  .prev-btn:hover,
  .next-btn:hover {
    transform: scale(1.2);
  }

  .prev-btn:active,
  .next-btn:active {
    transform: translate(0, 3px) scale(1.2);
  }
}

.cancel-btn {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  width: 200px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 25px;
  padding: 20px;
}

/* Carousel Card */

.carousel-card {
  overflow: hidden;
  border: 1px solid #ffffff;
  border-radius: 8px;
  cursor: pointer;
  background-color: #000000;
}

.carousel-card .card {
  width: 150px;
  height: 200px;
  border: 4px solid #000000;
  border-radius: 8px;
}

.carousel-card .card-stat-badge {
  width: 30px;
  height: 30px;
  font-size: 18px;
}

.carousel-card .card-stat-badge.value,
.carousel-card .card-stat-badge.ability {
  margin-top: 2px;
  margin-left: 2px;
}

.carousel-card .card-stat-badge.type {
  bottom: 4px;
  right: 2px;
}

/* Animations */

.fade {
  animation-name: fade;
  animation-duration: 0.5s;
}

.quick-fade {
  animation-name: fade;
  animation-duration: 0.1s;
}

@keyframes fade {
  from {
    opacity: 0.4;
  }
  to {
    opacity: 1;
  }
}

/* Loader fade out */
.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.5s;
}

.fade-enter,
.fade-leave-to {
  opacity: 0;
}

/* Desktop Styles */
@media (min-width: 1200px) and (min-height: 880px) and (orientation: landscape) {
  .game-container {
    width: 80%;
    max-width: 1600px;
  }
}

/* Desktop / Tablet Styles */
@media (min-height: 880px) and (orientation: landscape),
  (min-width: 768px) and (min-height: 1024px) and (orientation: portrait) {
  /* Board Layout */

  .game-stats,
  .card-row {
    height: 110px;
  }

  .game-stats {
    padding-left: 80px;
  }

  .row-stats {
    flex: 0 80px;
  }

  .player-stats {
    padding-right: 20px;
  }

  .opponent-stats {
    padding-left: 20px;
  }

  .player-total.stat-badge,
  .opponent-total.stat-badge {
    border: 5px solid #ffffff;
  }

  .player-total.stat-badge,
  .opponent-total.stat-badge {
    width: 80px;
    height: 80px;
    line-height: 80px;
    font-size: 36px;
  }

  .row-stats .stat-badge {
    width: 50px;
    height: 50px;
    line-height: 50px;
    font-size: 26px;
  }

  /* Board Card */

  .board-card .card {
    width: 90px;
  }

  .board-card .card-stat-badge {
    width: 26px;
    height: 26px;
    font-size: 16px;
  }

  .board-card .card-stat-badge.type {
    bottom: 3px;
  }

  /* Card Modal */

  .card-modal {
    bottom: 110px;
  }

  /* Card Carousel */

  .card-carousel {
    width: 460px;
  }

  /* Carousel Card */

  .carousel-card {
    border: 2px solid #ffffff;
    border-radius: 10px;
  }

  .carousel-card .card {
    width: 250px;
    height: 350px;
    border: 8px solid #000000;
    border-radius: 10px;
  }

  .carousel-card .card-stat-badge {
    width: 50px;
    height: 50px;
    font-size: 30px;
  }

  .carousel-card .card-stat-badge.value,
  .carousel-card .card-stat-badge.ability {
    margin-top: 5px;
    margin-left: 5px;
  }

  .carousel-card .card-stat-badge.type {
    bottom: 10px;
    right: 5px;
  }

  .prev-btn,
  .next-btn {
    width: 70px;
    height: 70px;
    line-height: 70px;
    margin-top: -35px;
  }
}

